samples/_failures_safe/1761249564_1acf35_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b490968.c: In function ‘main’:
./samples/SAFE/__tmp_3b490968.c:136:5: error: expected ‘{’ at end of input
  136 |     struct
      |     ^~~~~~
./samples/SAFE/__tmp_3b490968.c:136:5: error: expected declaration or statement at end of input
